--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.0",
 	"private": true,
 	"scripts": {
-		"start": "nodemon index.js",
+		"start": "node index.js",
 		"dev": "nodemon index.js",
 		"test": "jest --detectOpenHandles",
 		"test:watch": "jest --watch",
